syntax = "proto3";

package com.example.internal.input.reqreply;

import "com/example/internal/commonmodels/error.proto";

option java_multiple_files = true;

message CancelPassRequest {
  string id = 1;
  string owner_id = 2;
}

message CancelPassResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  message Failure {
    string message = 100;

    oneof error {
      com.example.internal.commonmodels.Error pass_owner_not_found_by_id = 1;
    }
  }
}
