syntax = "proto3";

import "commonmodels/pass.proto";
import "commonmodels/error.proto";

option java_package = "com.example.passmanagersvc.input.reqreply";
option java_multiple_files = true;

message FindPassByIdRequest {
  string id = 1;
}

message FindPassByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Pass pass = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      Error not_found_by_id = 1;
    }
  }
}
